<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white_grey"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/lnrcrd"
        android:padding="@dimen/padding_content2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_content"
            android:layout_marginLeft="@dimen/padding_content"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/key"
                android:textColor="@color/blue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/blue1"
                android:paddingLeft="@dimen/padding_content2"
                android:background="@drawable/background_polos"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_content"
            android:layout_marginLeft="@dimen/padding_content"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/plaintext"
                android:textColor="@color/blue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtPlaintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/blue1"
                android:singleLine="true"
                android:paddingLeft="@dimen/padding_content2"
                android:background="@drawable/background_polos"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_content"
            android:layout_marginLeft="@dimen/padding_content"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/chipertext"
                android:textColor="@color/blue1"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtChipertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/blue1"
                android:paddingLeft="@dimen/padding_content2"
                android:inputType="text"
                android:background="@drawable/background_grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_dark"/>

        </LinearLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/padding_content"
            android:layout_marginLeft="@dimen/padding_content"
            android:fontFamily="@font/quicksand_medium"
            android:textStyle="bold"
            android:background="@drawable/login_button_bk"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
